--- a/build.gradle
+++ b/build.gradle
@@ -23,25 +23,32 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation platform('software.amazon.awssdk:bom:2.20.34')
-	implementation 'software.amazon.awssdk:s3'
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
-}
+// DB 연결용 MySQL 드라이버
+runtimeOnly 'com.mysql:mysql-connector-j'
+
+// 테스트 관련
+testImplementation 'org.springframework.boot:spring-boot-starter-test'
+testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+//JWT
+implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+//security
+implementation 'org.springframework.boot:spring-boot-starter-security'
+
+//S3
+implementation platform("software.amazon.awssdk:bom:2.25.16")
+implementation 'software.amazon.awssdk:s3'
+implementation 'software.amazon.awssdk:auth'
+
+//test
+testImplementation 'org.junit.jupiter:junit-jupiter-api'
+testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+testImplementation 'org.mockito:mockito-core'
+testImplementation 'org.mockito:mockito-junit-jupiter'
+testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 
 tasks.named('test') {
