--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	// Spring Security
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	// AWS SDK BOM
 	implementation platform("software.amazon.awssdk:bom:2.25.16")
@@ -63,6 +63,9 @@ dependencies {
 
 	// Hibernate Validator
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+
+	// 카카오 API
+	implementation 'org.json:json:20240303'
 
 	// 테스트 관련
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
