--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=oss-project
+kakao.rest-api-key=45f0e8d0771eee3a2c091bd0830f0141
+# MySQL ?? ??
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=pjs030402!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA ??
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
