--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,14 +2,14 @@ name: Spring Boot Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]  # 또는 deploy 대상 브랜치
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source
+    - name: Checkout source code
       uses: actions/checkout@v3
 
     - name: Set up JDK 17
@@ -18,23 +18,24 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Build with Gradle
-      run: ./gradlew clean build
-
-    - name: Create application.yml
+    - name: Create application.yml from secret
       run: |
         mkdir -p src/main/resources
         echo "${{ secrets.APPLICATION_YML }}" > src/main/resources/application.yml
 
-    - name: Copy jar and yml to remote server
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew clean build
+
+    - name: Copy jar to remote server
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.DEPLOY_SERVER_IP }}
         username: ${{ secrets.DEPLOY_SERVER_USER }}
         key: ${{ secrets.DEPLOY_SERVER_KEY }}
-        source: |
-          build/libs/*.jar
-          src/main/resources/application.yml
+        source: build/libs/*.jar
         target: ${{ secrets.DEPLOY_DIRECTORY }}
 
     - name: Run jar on remote server
@@ -46,4 +47,4 @@ jobs:
         script: |
           pkill -f 'java -jar' || true
           cd ${{ secrets.DEPLOY_DIRECTORY }}
-          nohup java -jar $(ls -t *.jar | head -n 1) --spring.config.location=application.yml > app.log 2>&1 &
+          nohup java -jar $(ls -t *.jar | head -n 1) > app.log 2>&1 &
