--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Create application.yml from secret
       run: |
         mkdir -p src/main/resources
-        echo "${{ secrets.APPLICATION_YML }}" > src/main/resources/application.yml
+        printf "%s" "${{ secrets.APPLICATION_YML }}" > src/main/resources/application.yml
 
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
