--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Spring Boot Deploy
 
 on:
   push:
-    branches: [ "main" ]  # 또는 deploy 대상 브랜치
+    branches: [ "main" ]
 
 jobs:
   deploy:
@@ -29,14 +29,12 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
 
-    - name: Copy jar to remote server
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.DEPLOY_SERVER_IP }}
-        username: ${{ secrets.DEPLOY_SERVER_USER }}
-        key: ${{ secrets.DEPLOY_SERVER_KEY }}
-        source: build/libs/*.jar
-        target: ${{ secrets.DEPLOY_DIRECTORY }}
+    - name: Debug Check if deploy.sh and jar exist
+      run: |
+        echo "📂 현재 디렉토리:" && pwd
+        ls -al
+        echo "📁 build/libs 디렉토리:"
+        ls -al build/libs || echo "❌ build/libs 없음"
 
     - name: Copy jar and deploy.sh to remote server
       uses: appleboy/scp-action@master
@@ -48,3 +46,22 @@ jobs:
           ./build/libs/*.jar
           ./deploy.sh
         target: ${{ secrets.DEPLOY_DIRECTORY }}
+
+    - name: Execute deploy.sh on remote server
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.DEPLOY_SERVER_IP }}
+        username: ${{ secrets.DEPLOY_SERVER_USER }}
+        key: ${{ secrets.DEPLOY_SERVER_KEY }}
+        script: |
+          echo "📁 서버 디렉토리 이동"
+          cd ${{ secrets.DEPLOY_DIRECTORY }}
+
+          echo "📄 파일 목록:"
+          ls -al
+
+          echo "🛠️ deploy.sh 권한 설정"
+          chmod +x deploy.sh
+
+          echo "🚀 deploy.sh 실행"
+          ./deploy.sh
