--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Spring Boot Deploy
 
 on:
   push:
-    branches: [ "main" ]  # 배포 대상 브랜치
+    branches: [ "main" ]  # 또는 배포 브랜치명
 
 jobs:
   deploy:
@@ -29,17 +29,21 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
 
-    - name: Ensure deploy files are readable
-      run: chmod +r ./build/libs/*.jar ./deploy.sh
+    - name: Check build output
+      run: |
+        echo "📁 build/libs 디렉토리 내용:"
+        ls -al ./build/libs/
+        echo "📁 현재 디렉토리 내용:"
+        ls -al .
 
     - name: Copy jar and deploy.sh to remote server
-      uses: appleboy/scp-action@v0.1.4  # master 대신 안정적인 버전
+      uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.DEPLOY_SERVER_IP }}
         username: ${{ secrets.DEPLOY_SERVER_USER }}
         key: ${{ secrets.DEPLOY_SERVER_KEY }}
         source: |
-          ./build/libs/oss-project-0.0.1-SNAPSHOT.jar
+          ./build/libs/*.jar
           ./deploy.sh
         target: ${{ secrets.DEPLOY_DIRECTORY }}
 
