--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,9 @@ dependencies {
 
 	//Pair 사용
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+	//Quartz
+	implementation 'org.springframework.boot:spring-boot-starter-quartz'
 }
 
 tasks.named('test') {
